[package]
name = "country_service_actix"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
lapin = "3.6.0"
rabbitmq-stream-client = "0.9.0"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
