[package]
name = "country_service_actix"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
diesel = { version = "2.3.2", features = ["chrono", "postgres", "r2d2", "serde_json"] }
dotenvy = "0.15.7"
futures = "0.3.31"
lapin = "3.6.0"
rabbitmq-stream-client = "0.9.0"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
